<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivities.TitleActivity"
    android:theme="@style/Theme.Material3.Dark.NoActionBar"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="20dp"
        android:paddingStart="30dp"
        android:paddingBottom="10dp"
        android:paddingEnd="0dp"
        android:background="@drawable/rounded_corners_header_title">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="30dp"
            android:layout_margin="5dp"
            android:elevation="10dp">

            <ImageView
                android:id="@+id/TitleImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/minichat_icon"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:contentDescription="@string/AppName" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AppName"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:id="@+id/greetingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/GreetingText"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="italic" />

    <Button android:id="@+id/register_to_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greetingText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/enter_to_reg_text"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"/>

    <TextView
        android:id="@+id/already_registered_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/already_registered_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp" />

    <TextView android:id="@+id/sign_in_to_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/already_registered_textview"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:textColor="@color/purple_200" />

</RelativeLayout>