<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/gray_a50p"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:weightSum="20">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/transparent"
            android:outlineSpotShadowColor="@color/transparent">

            <ImageButton
                android:id="@+id/back_to_main"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textSize="30sp"
                android:background="@drawable/left_arrow"
                android:layout_gravity="center"
                android:contentDescription="@string/back_to_main" />

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="19"
            android:clickable="true"
            android:layout_gravity="center_vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/avatar_header_card"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="100dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/avatar_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/chat_miniature_avatar"
                    android:src="@drawable/ic_acc_filled_purple"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/avatar_header_card"
                android:text="@string/sign_out"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/currentState_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_toEndOf="@+id/avatar_header_card"
                android:text="@string/search"
                android:textColor="@color/light_gray"
                android:layout_marginStart="10dp"/>

        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/middle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/header"
        android:layout_above="@+id/footer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:weightSum="20"
        android:background="@color/gray_a50p"
        android:paddingHorizontal="5dp"
        android:paddingVertical="6dp">

        <EditText
            android:id="@+id/writing_line_edt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/message"
            android:layout_weight="18"
            android:textSize="20sp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/white"
            android:autofillHints="Message"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:background="@drawable/rounded_search_line"
            android:layout_marginEnd="10dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="@color/transparent"
            android:outlineSpotShadowColor="@color/transparent">

            <ImageButton
                android:id="@+id/sent_message_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/sent_messages"
                android:background="@drawable/right_arrow_filled"
                android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>